# rust-datadog-lambda

./: Cargo.toml  docker-compose.yml  request_example.json  request_example_with_trace.json  rustfmt.toml
src/: datadog.rs  datadog_helper.rs  main.rs  otel_helper.rs  span_processor.rs
