[package]
name = "rust-datadog"
version = "0.1.0"
edition = "2021"

[features]
default = [ "otel_dd" ]

owned = [] # 独自実装版
otel_dd = [ # opentelemetry-datadog版
    "dep:opentelemetry",
    "dep:opentelemetry_api",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-datadog",
    "dep:opentelemetry-http",
    "dep:tracing-opentelemetry",
]
otel_otlp = [ # opentelemetry-otlp版
    "dep:opentelemetry",
    "dep:opentelemetry_api",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-datadog", # Propagatorだけ使う
    "dep:opentelemetry-http",
    "dep:tracing-opentelemetry",
]

[dependencies]
chrono = "0.4.26"
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_rest"] }
lambda_runtime = "0.8.0"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = "0.11.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
time = "0.3.21"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "local-time", "json"] }

opentelemetry = { version = "0.19.0", features = ["trace", "rt-tokio"], optional = true }
opentelemetry_api = { version = "0.19.0", optional = true }
opentelemetry_sdk = { version = "0.19.0", optional = true }
opentelemetry-http = { version = "0.8.0", optional = true }
opentelemetry-otlp = { version = "0.12.0", optional = true }
opentelemetry-datadog = { version = "0.7.0", features = ["reqwest-client"], optional = true }
tracing-opentelemetry = { version = "0.19.0", optional = true }
